--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -23,8 +23,7 @@ summary {
 }
 audio,
 canvas,
-progress,
-video {
+progress{
   display: inline-block;
   vertical-align: baseline;
 }
@@ -226,8 +225,7 @@ th {
   a[href^="javascript:"]:after {
     content: "";
   }
-  pre,
-  blockquote {
+  pre {
     border: 1px solid #999;
 
     page-break-inside: avoid;
@@ -714,54 +712,6 @@ abbr[data-original-title] {
 .initialism {
   font-size: 90%;
   text-transform: uppercase;
-}
-blockquote {
-  padding: 10px 20px;
-  margin: 0 0 20px;
-  font-size: 17.5px;
-  border-left: 5px solid #eee;
-}
-blockquote p:last-child,
-blockquote ul:last-child,
-blockquote ol:last-child {
-  margin-bottom: 0;
-}
-blockquote footer,
-blockquote small,
-blockquote .small {
-  display: block;
-  font-size: 80%;
-  line-height: 1.42857143;
-  color: #777;
-}
-blockquote footer:before,
-blockquote small:before,
-blockquote .small:before {
-  content: '\2014 \00A0';
-}
-.blockquote-reverse,
-blockquote.pull-right {
-  padding-right: 15px;
-  padding-left: 0;
-  text-align: right;
-  border-right: 5px solid #eee;
-  border-left: 0;
-}
-.blockquote-reverse footer:before,
-blockquote.pull-right footer:before,
-.blockquote-reverse small:before,
-blockquote.pull-right small:before,
-.blockquote-reverse .small:before,
-blockquote.pull-right .small:before {
-  content: '';
-}
-.blockquote-reverse footer:after,
-blockquote.pull-right footer:after,
-.blockquote-reverse small:after,
-blockquote.pull-right small:after,
-.blockquote-reverse .small:after,
-blockquote.pull-right .small:after {
-  content: '\00A0 \2014';
 }
 address {
   margin-bottom: 20px;
@@ -2720,9 +2670,7 @@ input[type="button"].btn-block {
 .collapse.in {
   display: block;
 }
-tr.collapse.in {
-  display: table-row;
-}
+
 tbody.collapse.in {
   display: table-row-group;
 }
@@ -3930,24 +3878,7 @@ fieldset[disabled] .navbar-inverse .btn-link:hover,
 fieldset[disabled] .navbar-inverse .btn-link:focus {
   color: #444;
 }
-.breadcrumb {
-  padding: 8px 15px;
-  margin-bottom: 20px;
-  list-style: none;
-  background-color: #f5f5f5;
-  border-radius: 4px;
-}
-.breadcrumb > li {
-  display: inline-block;
-}
-.breadcrumb > li + li:before {
-  padding: 0 5px;
-  color: #ccc;
-  content: "/\00a0";
-}
-.breadcrumb > .active {
-  color: #777;
-}
+
 .pagination {
   display: inline-block;
   padding-left: 0;
@@ -4921,8 +4852,7 @@ button.list-group-item-danger.active:focus {
 .embed-responsive .embed-responsive-item,
 .embed-responsive iframe,
 .embed-responsive embed,
-.embed-responsive object,
-.embed-responsive video {
+.embed-responsive object{
   position: absolute;
   top: 0;
   bottom: 0;
@@ -4946,10 +4876,6 @@ button.list-group-item-danger.active:focus {
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-}
-.well blockquote {
-  border-color: #ddd;
-  border-color: rgba(0, 0, 0, .15);
 }
 .well-lg {
   padding: 24px;
@@ -5816,4 +5742,7 @@ button{
   font-family: 'Ubuntu', sans-serif;
   font-weight: 700;
   padding: 0;
+}
+.footer-color{
+  background-color: #ffde2f;
 }
