--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../fonts/fontello.eot?28857841');
-  src: url('../fonts/fontello.eot?28857841#iefix') format('embedded-opentype'),
-       url('../fonts/fontello.woff2?28857841') format('woff2'),
-       url('../fonts/fontello.woff?28857841') format('woff'),
-       url('../fonts/fontello.ttf?28857841') format('truetype'),
-       url('../fonts/fontello.svg?28857841#fontello') format('svg');
+  src: url('../fonts/fontello.eot?79700882');
+  src: url('../fonts/fontello.eot?79700882#iefix') format('embedded-opentype'),
+       url('../fonts/fontello.woff2?79700882') format('woff2'),
+       url('../fonts/fontello.woff?79700882') format('woff'),
+       url('../fonts/fontello.ttf?79700882') format('truetype'),
+       url('../fonts/fontello.svg?79700882#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?28857841#fontello') format('svg');
+    src: url('../font/fontello.svg?79700882#fontello') format('svg');
   }
 }
 */
@@ -56,6 +56,8 @@
 }
 
 .fa-left-open:before { content: '\e800'; } /* '' */
+.fa-mail:before { content: '\e801'; } /* '' */
 .fa-twitter:before { content: '\f099'; } /* '' */
 .fa-facebook:before { content: '\f09a'; } /* '' */
+.fa-mobile:before { content: '\f10b'; } /* '' */
 .fa-instagram:before { content: '\f16d'; } /* '' */
