--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -14,15 +14,11 @@ figure,
 footer,
 header,
 hgroup,
-main,
-menu,
-nav,
-section {
+nav {
   display: block;
 }
 audio,
-canvas,
-progress{
+canvas {
   display: inline-block;
   vertical-align: baseline;
 }
@@ -74,10 +70,6 @@ h1 {
   margin-top: 0;
   text-align: end;
 }
-mark {
-  color: #000;
-  background: #ff0;
-}
 small {
   font-size: 80%;
 }
@@ -93,19 +85,14 @@ hr {
      -moz-box-sizing: content-box;
           box-sizing: content-box;
 }
-pre {
-  overflow: auto;
-}
+
 code,
-kbd,
-pre,
-samp {
+kbd {
   font-family: monospace, monospace;
   font-size: 1em;
 }
 button,
 input,
-optgroup,
 select,
 textarea {
   margin: 0;
@@ -114,9 +101,6 @@ textarea {
 }
 button {
   overflow: visible;
-}
-button,
-select {
   text-transform: none;
 }
 button,
@@ -163,17 +147,9 @@ fieldset {
   margin: 0 2px;
   border: 1px solid #c0c0c0;
 }
-legend {
-  padding: 0;
-  border: 0;
-}
 textarea {
   overflow: auto;
 }
-optgroup {
-  font-weight: bold;
-}
-
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
   *,
@@ -198,11 +174,6 @@ optgroup {
   a[href^="#"]:after,
   a[href^="javascript:"]:after {
     content: "";
-  }
-  pre {
-    border: 1px solid #999;
-
-    page-break-inside: avoid;
   }
   img {
     page-break-inside: avoid;
@@ -498,11 +469,7 @@ small,
 .small {
   font-size: 85%;
 }
-mark,
-.mark {
-  padding: .2em;
-  background-color: #fcf8e3;
-}
+
 .text-left {
   text-align: left;
 }
@@ -613,10 +580,6 @@ ol {
   margin-bottom: 10px;
   list-style: none;
 }
-ol ul,
-ol ol {
-  margin-bottom: 0;
-}
 .list-unstyled {
   padding-left: 0;
   list-style: none;
@@ -674,9 +637,7 @@ address {
   line-height: 1.42857143;
 }
 code,
-kbd,
-pre,
-samp {
+kbd {
   font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 code {
@@ -701,27 +662,6 @@ kbd kbd {
   font-weight: bold;
   -webkit-box-shadow: none;
           box-shadow: none;
-}
-pre {
-  display: block;
-  padding: 9.5px;
-  margin: 0 0 10px;
-  font-size: 13px;
-  line-height: 1.42857143;
-  color: #333;
-  word-break: break-all;
-  word-wrap: break-word;
-  background-color: #f5f5f5;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-pre code {
-  padding: 0;
-  font-size: inherit;
-  color: inherit;
-  white-space: pre-wrap;
-  background-color: transparent;
-  border-radius: 0;
 }
 .pre-scrollable {
   max-height: 340px;
@@ -1411,23 +1351,6 @@ fieldset {
   margin: 0;
   border: 0;
 }
-legend {
-  display: block;
-  width: 100%;
-  padding: 0;
-  margin-bottom: 20px;
-  font-size: 21px;
-  line-height: inherit;
-  color: #333;
-  border: 0;
-  border-bottom: 1px solid #e5e5e5;
-}
-label {
-  display: inline-block;
-  max-width: 100%;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
 input[type="search"] {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
@@ -1445,20 +1368,10 @@ input[type="range"] {
   display: block;
   width: 100%;
 }
-select[multiple] {
-  height: auto;
-}
 input[type="file"]:focus,
 input[type="radio"]:focus{
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
-}
-output {
-  display: block;
-  padding-top: 7px;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #555;
 }
 .form-control {
   display: block;
@@ -1508,9 +1421,6 @@ fieldset[disabled] .form-control {
 fieldset[disabled] .form-control {
   cursor: not-allowed;
 }
-textarea.form-control {
-  height: auto;
-}
 input[type="search"] {
   -webkit-appearance: none;
 }
@@ -1545,51 +1455,6 @@ input[type="search"] {
 .form-group {
   margin-bottom: 15px;
 }
-.radio {
-  position: relative;
-  display: block;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-.radio label {
-  min-height: 20px;
-  padding-left: 20px;
-  margin-bottom: 0;
-  font-weight: normal;
-  cursor: pointer;
-}
-.radio input[type="radio"],
-.radio-inline input[type="radio"] {
-  position: absolute;
-  margin-top: 4px \9;
-  margin-left: -20px;
-}
-.radio + .radio {
-  margin-top: -5px;
-}
-.radio-inline{
-  position: relative;
-  display: inline-block;
-  padding-left: 20px;
-  margin-bottom: 0;
-  font-weight: normal;
-  vertical-align: middle;
-  cursor: pointer;
-}
-.radio-inline + .radio-inline {
-  margin-top: 0;
-  margin-left: 10px;
-}
-input[type="radio"][disabled],
-input[type="radio"].disabled,
-fieldset[disabled] input[type="radio"],{
-  cursor: not-allowed;
-}
-.radio-inline.disabled,
-fieldset[disabled] .radio-inline,
-fieldset[disabled] {
-  cursor: not-allowed;
-}
 .radio.disabled label,
 fieldset[disabled] .radio label,
 fieldset[disabled] {
@@ -1613,10 +1478,6 @@ fieldset[disabled] {
   line-height: 1.5;
   border-radius: 3px;
 }
-select.input-sm {
-  height: 30px;
-  line-height: 30px;
-}
 textarea.input-sm {
   height: auto;
 }
@@ -1631,10 +1492,6 @@ textarea.input-sm {
   height: 30px;
   line-height: 30px;
 }
-.form-group-sm textarea.form-control,
-.form-group-sm select[multiple].form-control {
-  height: auto;
-}
 .form-group-sm .form-control-static {
   height: 30px;
   min-height: 32px;
@@ -1648,10 +1505,6 @@ textarea.input-sm {
   font-size: 18px;
   line-height: 1.3333333;
   border-radius: 6px;
-}
-select.input-lg {
-  height: 46px;
-  line-height: 46px;
 }
 textarea.input-lg {
   height: auto;
@@ -2594,11 +2447,6 @@ select.input-group-lg > .input-group-btn > .btn {
   height: 46px;
   line-height: 46px;
 }
-select[multiple].input-group-lg > .form-control,
-select[multiple].input-group-lg > .input-group-addon,
-select[multiple].input-group-lg > .input-group-btn > .btn {
-  height: auto;
-}
 .input-group-sm > .form-control,
 .input-group-sm > .input-group-addon,
 .input-group-sm > .input-group-btn > .btn {
@@ -2607,12 +2455,6 @@ select[multiple].input-group-lg > .input-group-btn > .btn {
   font-size: 12px;
   line-height: 1.5;
   border-radius: 3px;
-}
-select.input-group-sm > .form-control,
-select.input-group-sm > .input-group-addon,
-select.input-group-sm > .input-group-btn > .btn {
-  height: 30px;
-  line-height: 30px;
 }
 .input-group-addon,
 .input-group-btn,
@@ -3366,52 +3208,6 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
     background-position: 0 0;
   }
 }
-.progress-striped .progress-bar,
-.progress-bar-striped {
-  background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-  background-image:      -o-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-  background-image:         linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-  -webkit-background-size: 40px 40px;
-          background-size: 40px 40px;
-}
-.progress.active .progress-bar,
-.progress-bar.active {
-  -webkit-animation: progress-bar-stripes 2s linear infinite;
-       -o-animation: progress-bar-stripes 2s linear infinite;
-          animation: progress-bar-stripes 2s linear infinite;
-}
-.progress-bar-success {
-  background-color: #5cb85c;
-}
-.progress-striped .progress-bar-success {
-  background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-  background-image:      -o-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-  background-image:         linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-}
-.progress-bar-info {
-  background-color: #5bc0de;
-}
-.progress-striped .progress-bar-info {
-  background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-  background-image:      -o-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-  background-image:         linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-}
-.progress-bar-warning {
-  background-color: #f0ad4e;
-}
-.progress-striped .progress-bar-warning {
-  background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-  background-image:      -o-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-  background-image:         linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-}
-.progress-bar-danger {
-  background-color: #d9534f;
-}
-.progress-striped .progress-bar-danger {
-  background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-  background-image:      -o-linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-  background-image:         linear-gradient(45deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-}
 a.list-group-item .list-group-item-heading,
 button.list-group-item .list-group-item-heading {
   color: #333;
@@ -4019,7 +3815,6 @@ textarea{
   resize: none;
 }
 input:focus,
-select:focus,
 textarea:focus,
 button:focus {
     outline: none;
